--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,13 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+.idea
+
+# terraform
+*.tfstate
+*.tfstate.backup
+.terraform
+
+# infracost
+.infracost
